--- a/eda_cpp-main/clustering/cpp/CMakeLists.txt
+++ b/eda_cpp-main/clustering/cpp/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
-project(clustering
-VERSION 1.0
-LANGUAGES CXX)
+project(clustering LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(test test.cpp src/utils.cpp src/matrix.cpp src/cluster.cpp)
-target_include_directories(test PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+
+add_executable(test
+    test.cpp
+    src/utils.cpp
+    src/matrix.cpp
+    src/cluster.cpp
+    src/simsearch.cpp
+)
